Simplification. Created secondary wrapper.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 
 {% if site.config.footer_text %}
-<footer class="footer">
-  <p class="text">{{ site.config.footer_text }}</p>
+<footer class="l-banner t-dark">
+  <p>{{ site.config.footer_text }}</p>
 </footer>
 {% endif %}
