--- a/css/style.scss
+++ b/css/style.scss
@@ -34,7 +34,9 @@
 // Components
 // ***********
 @import "components/embeds";
-@import "components/footer";
 @import "components/feature";
-@import "components/header";
 @import "components/images";
+
+// Theme
+// ******
+@import "theme/theme";
