Setting up a demo layout. First demo for CSS Grid.

--- a/_layouts/secondary.html
+++ b/_layouts/secondary.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js">
   {% include head.html %}
-  <body>
+  <body class="t-gray">
     {% include header-secondary.html %}
-    <main class="l-container">
+    <main class="l-container--demo">
       {{ content }}
     </main>
     {% include footer.html %}
