removed header class.

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -1,4 +1,4 @@
-<header class="header t-primary l-banner">
+<header class="t-primary l-banner">
   <div class="l-container">
     <nav>
       <ul class="l-list-inline text--right">
