--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -185,7 +185,7 @@ textarea {
   box-shadow: none;
 }
 
-@include selection { background: $selection-color; }
+::selection { background: $selection-color; }
 
 mark {
   background: $color-primary;
