--- a/_sass/theme/_theme.scss
+++ b/_sass/theme/_theme.scss
@@ -17,5 +17,5 @@
 
 .t-primary { background-color: $banner-bg; }
 .t-secondary { background-color: $color-secondary; }
-.t-dark { background-color: $grey-dark; }
-.t-gray { background-color: $grey-lighter; }
+.t-dark { background-color: $gray-90; }
+.t-gray { background-color: $gray-20; }
