--- a/css/style.scss
+++ b/css/style.scss
@@ -33,9 +33,11 @@
 
 // Components
 // ***********
+@import "components/button";
 @import "components/embeds";
 @import "components/feature";
 @import "components/images";
+@import "components/nav";
 
 // Theme
 // ******
