--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,23 @@ $bp-hands-wide: 48em;
 // $bp-desk:
 // $bp-wall
 
+// Brand colours
+// http://paletton.com/palette.php?uid=60A0u0kw0w0jvDaoOy4y4oODajv
+$color-primary: #a63c06;
+$color-primary-dark: darken(adjust-hue($color-primary, -3%), 6%);
+$color-secondary: #297799;
+
+$white: #fff;
+$gray-10: mix($color-primary, darken($white, 10%), 5%);
+$gray-20: mix($color-primary, darken($white, 20%), 5%);
+$gray-80: mix($color-primary, darken($white, 80%), 5%);
+$gray-90: mix($color-primary, darken($white, 90%), 5%);
+$black: #000;
+
+$color-pos: #23b249;
+$color-neg: #c11526;
+$color-neut: #ef6926;
+
 // Typography
 $system-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $font-family-main: $system-fonts;
@@ -27,29 +44,17 @@ $padding-large: 15%;
 $padding-small: 5%;
 $padding-x-small: 1%;
 
-// Brand colours
-// http://paletton.com/palette.php?uid=60A0u0kw0w0jvDaoOy4y4oODajv
-$rebeccapurple: #639;
-$primary-old: #d96300;
-$color-primary: darken(adjust-hue($primary-old, -6%), 10%);
-$color-secondary: darken(adjust-hue($rebeccapurple, -26%), 10%);
-
-$black: #000;
-$grey-dark: mix($color-primary, lighten($black, 10%), 5%);
-$grey-light: mix($color-primary, lighten($black, 80%), 8%);
-$grey-lighter: lighten($grey-light, 10%);
-$white: #fff;
 
 $background-color: #fff;
-$border-color: rgba($grey-dark, .25);
+$border-color: rgba($gray-80, .25);
 
 // Typography colours
-$text-color: $grey-dark;
+$text-color: $gray-80;
 $text-light: lighten($text-color, 10%);
 $link-color: $color-secondary;
 $link-color-hover: adjust-hue(saturate(darken($link-color, 10%), 2%), 4%);
 $selection-color: adjust-hue(desaturate(lighten($color-secondary, 20%), 5%), -3%); // visible when highlighting text
-$form-border-color: $grey-light;
+$form-border-color: $gray-20;
 
 // Other colours
 $linked-border: 1px solid $link-color;
@@ -63,14 +68,11 @@ $banner-color-hover: $link-color-hover;
 
 // Feature image for articles
 $feature-image-text-color: $white;
-$feature-image-text-light: $grey-light;
+$feature-image-text-light: $gray-20;
 $feature-bg-size: cover;
 
 // Layout
 // *******
-$reading-width: 40rem;
-
-// Neat layout variables
 $gutter: 1.25rem;
 $gutter-vertical: 1.25em;
 $max-width: 42rem;
