--- a/_sass/components/_button.scss
+++ b/_sass/components/_button.scss
@@ -1,9 +1,16 @@
 // Buttons
-button {
+button,
+input[type="submit"],
+.btn {
   display: inline-block;
   padding: .5em .75em;
   border: 1px solid;
   border-radius: .3em;
+  background-color: $background-color;
+  color: $link-color;
+  font-size: inherit;
+  text-decoration: none;
+  cursor: pointer;
 
   @include haf {
     border: $linked-border;
