Added links to styleguide.

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -11,6 +11,9 @@
         </li>
         {% endif %}
         {% endfor %}
+        <li>
+          <a href="{{ site.baseurl }}/styleguide" target="_blank">Styleguide</a>
+        </li>
       </ul>
     </nav>
     <h1>{{ site.config.title }}</h1>
