--- a/_includes/header-secondary.html
+++ b/_includes/header-secondary.html
@@ -14,6 +14,9 @@
         </li>
         {% endif %}
         {% endfor %}
+        <li>
+          <a href="{{ site.baseurl }}/styleguide" target="_blank">Styleguide</a>
+        </li>
       </ul>
     </nav>
   </div>
