--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,9 @@
         </li>
         {% endif %}
         {% endfor %}
+        <li>
+          <a href="{{ site.baseurl }}/styleguide" target="_blank">Styleguide</a>
+        </li>
       </ul>
     </nav>
     <a href="{{ site.baseurl }}/" class="h1">{{ site.config.title }}</a>
