--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -7,7 +7,7 @@ layout: secondary
     {% if page.audio %}
     <audio controls="controls">
       <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
-      <p>Please use a new browser version to hear the audio recording.</p>
+      <p>Please use an updated browser to hear the audio recording.</p>
     </audio>
     {% endif %}
   </header>
