--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,13 @@
-<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
-
 {% if site.config.footer_text %}
-<footer class="l-banner t-dark">
-  <p>{{ site.config.footer_text }}</p>
+<footer class="l-center banner t-dark">
+  <p>
+    {{ site.config.footer_text }}<br/>
+    &copy; {{ 'now' | date: "%Y" }} {{ site.config.title }}
+  </p>
 </footer>
 {% endif %}
+
+<!-- Snap SVG -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
+<!-- Main scripts -->
+<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
