--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -3,7 +3,7 @@ layout: secondary
 ---
 <article>
   <header>
-    <h1 class="title">{{ page.title }}</h1>
+    <h1 class="text-center">{{ page.title }}</h1>
     {% if page.audio %}
     <audio controls="controls">
       <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
