--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include header-home.html %}
-    <main class="l-container">
+    <main class="l-single-col">
       {{ content }}
     </main>
     {% include footer.html %}
