--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article>
   <section>
     <header>
-      <h1 class="title">{{ page.title }}</h1>
+      <h1 class="text-center">{{ page.title }}</h1>
       {% if page.audio %}
       <audio controls="controls">
         <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
