--- a/_sass/theme/_theme.scss
+++ b/_sass/theme/_theme.scss
@@ -1,21 +1,12 @@
-%theme-links {
-  color: inherit;
-
-  &:hover {
-    outline: 1px solid currentColor;
-    text-decoration-line: none;
-  }
+%dark-theme {
+  color: $banner-color;
 }
 
 .t-primary,
 .t-secondary,
-.t-dark {
-  color: $banner-color;
-
-  a { @extend %theme-links; }
-}
+.t-dark { @extend %dark-theme; }
 
 .t-primary { background-color: $banner-bg; }
 .t-secondary { background-color: $color-secondary; }
 .t-dark { background-color: $gray-90; }
-.t-gray { background-color: $gray-20; }
+.t-gray { background-color: $gray-10; }
