--- a/css/style.scss
+++ b/css/style.scss
@@ -33,10 +33,12 @@
 
 // Components
 // ***********
+@import "components/banner";
 @import "components/button";
 @import "components/embeds";
 @import "components/feature";
 @import "components/images";
+@import "components/logo";
 @import "components/nav";
 
 // Theme
