--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -18,6 +18,7 @@
       @include margin(null 0);
       display: inline-block;
       min-width: 0;
+      height: 100%;
       max-height: 100%;
     }
   }
