--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,7 @@
 // ***********
 @import "components/banner";
 @import "components/button";
+@import "components/color-band";
 @import "components/embeds";
 @import "components/feature";
 @import "components/images";
