--- a/_includes/header-secondary.html
+++ b/_includes/header-secondary.html
@@ -32,4 +32,13 @@
     	</ul>
     </div>
   </div>
+  <div class="color-band" id="gh-timeline">
+    <!--
+    This band is a visual representation of my latest public activity on
+    Github. Each of my last 30 events are represented by a block with each color representing a single event type. Hover over each to see the event type via the title attribute. - Alex
+
+    See a full list of events and descriptions at:
+    https://developer.github.com/v3/activity/events/types/
+    -->
+  </div>
 </header>
