--- a/_includes/header-secondary.html
+++ b/_includes/header-secondary.html
@@ -7,6 +7,9 @@
       </div>
       <nav class="nav--primary">
         <ul class="l-list-inline">
+          <li>
+            <a href="{{ site.baseurl }}/">Home</a>
+          </li>
           {% for page in site.pages %}
           {% if page.title and page.hide != true %}
           <li>
