--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -5,10 +5,7 @@ layout: secondary
   <header>
     <h1 class="text-center">{{ page.title }}</h1>
     {% if page.audio %}
-    <audio controls="controls">
-      <source type="audio/mp3" src="../../../assets/audio/{{ page.audio }}"></source>
-      <p>Please use an updated browser to hear the audio recording.</p>
-    </audio>
+      {% include page-audio.html %}
     {% endif %}
   </header>
   {{ content }}
