Moved small partials and headers into directories.

--- a/_includes/headers/header-home.html
+++ b/_includes/headers/header-home.html
@@ -1,15 +1,12 @@
 <header>
-  <div class="t-secondary">
+  <div class="t-gray">
     <div class="l-container banner--header">
-      <div class="logo--name-icon">
-        {% include svg-logo.html %}
+      <h1 class="logo--name-icon">
+        {% include components/svg-logo.html %}
         <span class="logo__name h1">{{ site.config.title }}</span>
-      </div>
+      </h1>
       <nav class="nav--primary">
         <ul class="l-list-inline">
-          <li>
-            <a href="{{ site.baseurl }}/">Home</a>
-          </li>
           {% for page in site.pages %}
           {% if page.title and page.hide != true %}
           <li>
@@ -25,6 +22,9 @@
         </ul>
       </nav>
     </div>
+    <!-- {% if site.config.header_text %}
+      {{ site.config.header_text }}
+    {% endif %} -->
   </div>
   <div class="t-secondary l-flush">
     <div class="l-container l-center">
@@ -33,5 +33,5 @@
     	</ul>
     </div>
   </div>
-  {% include color-band.html %}
+  {% include components/color-band.html %}
 </header>
