--- a/_includes/headers/header-secondary.html
+++ b/_includes/headers/header-secondary.html
@@ -1,8 +1,8 @@
 <header>
-  <div class="t-gray">
+  <div class="t-secondary">
     <div class="l-container banner--header">
       <div class="logo--name-icon">
-        {% include svg-logo.html %}
+        {% include components/svg-logo.html %}
         <span class="logo__name h1">{{ site.config.title }}</span>
       </div>
       <nav class="nav--primary">
@@ -33,5 +33,5 @@
     	</ul>
     </div>
   </div>
-  {% include color-band.html %}
+  {% include components/color-band.html %}
 </header>
