--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   {% include head.html %}
   <body>
-    {% include header-home.html %}
+    {% include headers/header-home.html %}
     <main class="l-single-col">
       {{ content }}
     </main>
