--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
     <header>
       <h1 class="text-center">{{ page.title }}</h1>
       {% if page.audio %}
-        {% include page-audio.html %}
+        {% include components/page-audio.html %}
       {% endif %}
     </header>
     {{ content }}
