--- a/_layouts/secondary.html
+++ b/_layouts/secondary.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   {% include head.html %}
   <body class="t-gray">
-    {% include header-secondary.html %}
+    {% include headers/header-secondary.html %}
     <main class="l-container--demo">
       {{ content }}
     </main>
