New blog post about the GitHub events band.

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -99,6 +99,7 @@ pre {
   padding: 1em;
   background-color: $color-primary;
   color: $gray-10;
+  overflow-x: scroll;
 }
 
 dt { font-weight: bold; }
