--- a/_sass/components/_banner.scss
+++ b/_sass/components/_banner.scss
@@ -20,9 +20,16 @@
   min-height: 1rem;
   margin-top: 0;
   padding: 0;
+  background-color: $color-primary-dark;
+}
+
+@keyframes fade-in {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 .color-band__block {
   flex-grow: 1;
   margin: 0;
+  animation: fade-in linear .125s;
 }
