Starting to clear things out

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include headers/header.html %}
-    <main class="l-single-col">
+    <main>
       {{ content }}
     </main>
     {% include footer.html %}
