--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 </article>
 
 <!-- Disqus -->
-{% if site.config.disqus_shortname %}
+{% if site.meta.disqus_shortname %}
 <aside>
   {% include disqus.html %}
 </aside>
