--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.config.title }}</title>
+	<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.meta.title }}</title>
 
-	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.config.description }}{% endif %}">
+	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.meta.description }}{% endif %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-Frame-Options" content="sameorigin">
 
@@ -17,30 +17,30 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 	<!-- RSS -->
-	<link rel="alternate" type="application/atom+xml" title="{{ site.config.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+	<link rel="alternate" type="application/atom+xml" title="{{ site.meta.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
 	<!-- Google Fonts -->
-	{% if site.config.google_fonts %}
-	<link href="//fonts.googleapis.com/css?family={{ site.config.google_fonts }}" rel="stylesheet" type="text/css">
+	{% if site.meta.google_fonts %}
+	<link href="//fonts.googleapis.com/css?family={{ site.meta.google_fonts }}" rel="stylesheet" type="text/css">
 	{% endif %}
 
   <!-- Open Graph -->
-  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.config.title }}{% endif %}" />
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.config.description }}{% endif %}" />
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.meta.title }}{% endif %}" />
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.meta.description }}{% endif %}" />
 
-  <meta property="og:image" content="{% if page.image %}{{ page.image | prepend: '/' | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.config.default_img | prepend: '/' | prepend: site.baseurl | prepend: site.url }}{% endif %}" />
-  <meta property="og:site_name" content="{{ site.config.title }}" />
+  <meta property="og:image" content="{% if page.image %}{{ page.image | prepend: '/' | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.meta.default_img | prepend: '/' | prepend: site.baseurl | prepend: site.url }}{% endif %}" />
+  <meta property="og:site_name" content="{{ site.meta.title }}" />
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 
 	<!-- Google Analytics -->
-	{% if site.config.google_analytics %}
+	{% if site.meta.google_analytics %}
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', '{{ site.config.google_analytics }}', 'auto');
+	ga('create', '{{ site.meta.google_analytics }}', 'auto');
 	ga('send', 'pageview');
 	</script>
 	{% endif %}
