--- a/_includes/headers/header.html
+++ b/_includes/headers/header.html
@@ -3,7 +3,7 @@
     <div class="l-container banner--header">
       <div class="logo--name-icon">
         {% include components/svg-logo.html %}
-        <span class="logo__name h1">{{ site.config.title }}</span>
+        <span class="logo__name h1">{{ site.meta.title }}</span>
       </div>
       <nav class="nav--primary">
         <ul class="l-list-inline">
