--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   {% include head.html %}
   <body>
-    {% include headers/header-home.html %}
-    <main class="l-single-col">
+    {% include headers/header.html %}
+    <main>
       {{ content }}
     </main>
     {% include footer.html %}
