--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,9 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.meta.title }}</title>
+	<title>
+		{% if page.title %}{{ page.title }} | {% endif %}{{ site.meta.title }}
+	</title>
 
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.meta.description }}{% endif %}">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
