--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="l-center banner t-dark">
+<footer>
   <p>
     {% if site.meta.footer_text %}
       {{ site.meta.footer_text }}<br/>
