--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section>
   <header>
-    <h1 class="text-center">{{ page.title }}</h1>
+    <h1>{{ page.title }}</h1>
     {% if page.audio %}
       {% include components/page-audio.html %}
     {% endif %}
