--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,12 @@
 ---
 layout: default
 ---
-<article>
-  <section>
-    <header>
-      <h1 class="text-center">{{ page.title }}</h1>
-      {% if page.audio %}
-        {% include components/page-audio.html %}
-      {% endif %}
-    </header>
-    {{ content }}
-  </section>
-</article>
+<section>
+  <header>
+    <h1>{{ page.title }}</h1>
+    {% if page.audio %}
+      {% include components/page-audio.html %}
+    {% endif %}
+  </header>
+  {{ content }}
+</section>
