--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<article>
+<section>
   <header>
-    <h1 class="text-center">{{ page.title }}</h1>
+    <h1>{{ page.title }}</h1>
     {% if page.audio %}
       {% include components/page-audio.html %}
     {% endif %}
   </header>
   {{ content }}
-</article>
+</section>
