--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article>
   <section>
     <header>
-      <h1 class="text-center">{{ page.title }}</h1>
+      <h1>{{ page.title }}</h1>
       {% if page.audio %}
         {% include components/page-audio.html %}
       {% endif %}
@@ -12,7 +12,6 @@ layout: default
     {{ content }}
   </section>
 </article>
-
 <!-- Disqus -->
 {% if site.meta.disqus_shortname %}
 <aside>
