--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,4 +8,9 @@ $bp-desk: 100em;
 
 // Typography
 $system-fonts: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
-$font-family-main: $system-fonts;
+
+$font-family-primary: $system-fonts;
+$font-size-primary: 1rem;
+
+// Layout
+$layout-width: 75rem;
