--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-<div id="disqus_thread"></div>
+<aside id="disqus_thread"></aside>
 <script type="text/javascript">
 	var disqus_shortname = '{{ site.meta.disqus_shortname }}';
 	(function() {
