Adds photos to post

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -4,5 +4,8 @@ body {
 }
 
 img {
-  max-width: 100%;
+  width: auto; // TEMP
+  max-width: 37.5rem; // TEMP
+  height: auto; // TEMP
+  max-height: 21rem; // TEMP
 }
