Sets new max-width

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include headers/header.html %}
-    <main class="l-container">
+    <main class="l-content">
       {{ content }}
     </main>
     {% include footer.html %}
