--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,4 +13,5 @@ $font-family-primary: $system-fonts;
 $font-size-primary: 1rem;
 
 // Layout
-$layout-width: 75rem;
+$layout-width: 60rem;
+$content-width: 40rem;
