Adds breakpoint border indicator colors

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,3 +15,16 @@ $font-size-primary: 1rem;
 // Layout
 $layout-width: 60rem;
 $content-width: 40rem;
+
+// Colors
+// ******
+
+// BP colors TEMP - Early development breakpoint indicator.
+// Chosen semi-randomly using http://www.colors.commutercreative.com/
+// stylelint-disable color-named
+$color-zero: chocolate;
+$color-palm: darkviolet;
+$color-hands: aquamarine;
+$color-hands-wide: palevioletred;
+$color-lap: rebeccapurple;
+$color-desk: darkcyan;
