Improves header and footer layouts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     {% endif %}
     &copy; {{ 'now' | date: "%Y" }} {{ site.meta.title }}
   </p>
-  <ul>
+  <ul class="c-nav__list">
     {% include icons.html %}
   </ul>
 </footer>
