--- a/css/style.scss
+++ b/css/style.scss
@@ -31,4 +31,6 @@
 
 // Components
 // ***********
-@import "components/logo";
+@import "components/header";
+@import "components/logo"; // TEMP
+@import "components/nav";
