--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -3,21 +3,12 @@ body {
   border: 2px solid $color-zero; // TEMP
   font-family: $font-family-primary;
 
-  @media (min-width: $bp-palm) {
-    border-color: $color-palm;
-  }
-  @media (min-width: $bp-hands) {
-    border-color: $color-hands;
-  }
-  @media (min-width: $bp-hands-wide) {
-    border-color: $color-hands-wide;
-  }
-  @media (min-width: $bp-lap) {
-    border-color: $color-lap;
-  }
-  @media (min-width: $bp-desk) {
-    border-color: $color-desk;
-  }
+  // TEMP
+  @media (min-width: $bp-palm) { border-color: $color-palm; }
+  @media (min-width: $bp-hands) { border-color: $color-hands; }
+  @media (min-width: $bp-hands-wide) { border-color: $color-hands-wide; }
+  @media (min-width: $bp-lap) { border-color: $color-lap; }
+  @media (min-width: $bp-desk) { border-color: $color-desk; }
 }
 
 img {
