--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -2,8 +2,9 @@
 body {
   border: 2px solid $color-zero; // TEMP
   font-family: $font-family-primary;
+  transition: border-color linear 1s; // TEMP
 
-  // TEMP
+  // TEMP... I think I'm going to keep this.
   @media (min-width: $bp-palm) { border-color: $color-palm; }
   @media (min-width: $bp-hands) { border-color: $color-hands; }
   @media (min-width: $bp-hands-wide) { border-color: $color-hands-wide; }
