--- a/css/style.scss
+++ b/css/style.scss
@@ -31,6 +31,7 @@
 
 // Components
 // ***********
+@import "components/footer";
 @import "components/header";
 @import "components/logo"; // TEMP
 @import "components/nav";
