--- a/_includes/headers/header.html
+++ b/_includes/headers/header.html
@@ -3,7 +3,7 @@
   <h1>
     <a href="/">{{ site.meta.title }}</a>
   </h1>
-  <nav>
+  <nav class="c-nav">
     <ul class="c-nav__list">
       {% for page in site.pages %}
         {% if page.title and page.hide != true %}
