--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,11 +21,11 @@ $spacing-unit: 1rem;
 // ******
 
 // BP colors TEMP - Early development breakpoint indicator.
-// Chosen semi-randomly using http://www.colors.commutercreative.com/
-// stylelint-disable color-named
-$color-zero: chocolate;
-$color-palm: darkviolet;
-$color-hands: aquamarine;
-$color-hands-wide: palevioletred;
-$color-lap: rebeccapurple;
-$color-desk: darkcyan;
+$colors-persephone: (
+  shadow: #c78577,
+  white: #cfd3d4,
+  black: #040404,
+  base: #48788c,
+  highlight: #cf3664,
+  border: #6ed7c3
+);
