--- a/_includes/headers/header.html
+++ b/_includes/headers/header.html
@@ -5,11 +5,11 @@
   </h1>
   <nav class="c-nav">
     <ul class="c-nav__list">
-      {% for page in site.pages %}
-        {% if page.title and page.hide != true %}
+      {% for page in site.data.nav.docs %}
+        {% if page.title %}
         <li class="c-nav__list__item">
           <a href="{{ page.url | prepend: site.baseurl }}">
-            {% if page.menu_title %}{{ page.menu_title }}{% else %}{{ page.title }}{% endif %}
+            {{ page.title }}
           </a>
         </li>
         {% endif %}
